[JSC] IndexedDB: Exceptions not thrown for non-cloneable values https://bugs.webkit.org/show_bug.cgi?id=113689

Patch by Michael Pruett <michael@68k.org> on 2013-04-01
Reviewed by Kentaro Hara.

Source/WebCore:

ScriptValue::serialize() should not clear exceptions thrown during
serialization. This change is needed to match behavior in V8.

Tests: storage/indexeddb/clone-exception.html
       storage/indexeddb/exceptions.html
       storage/indexeddb/structured-clone.html

* bindings/js/ScriptValue.cpp:
(WebCore::ScriptValue::serialize):

LayoutTests:

* platform/gtk/TestExpectations:

Canonical link: https://commits.webkit.org/132064@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@147382 268f45cc-cd09-0410-ab3c-d52691b4dbfc